# DearImGuiRedisAssistant

./: .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build-linux.sh  build-windows.bat
.github/workflows/: build-release.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
releases/: README.md
releases/v1.0.0/linux/: DearImGuiRedisAssistant
releases/v1.0.0/windows/: README.md
src/: RedisClient.cpp  RedisClient.h  main.cpp
